Fix punctuation in release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -47,7 +47,7 @@
         in Pester’s Dock icon on OS X 10.8 and later until you toggled
         the option in Preferences.</li>
         <li>Permit entry of midnight as “0” (previously you needed to
-        use “00” or “24”.)</li>
+        use “00” or “24”).</li>
         <li>Update Read Me for changes in Pester 1.1.</li>
         <li>Improve display of Read Me.</li>
     </ul></td></tr>
