--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -18,17 +18,49 @@
 <table class="note" id="sparkle-note" style="display: none">
 	<tr><th>Important: do not click “Install Update”</th></tr>
 	<tr><td>
-          <p>A recent Apple security update causes updates through
-            this window to fail.</p>
-          <p>To update, please download Pester 1.1b18 <a
-          href="http://sabi.net/nriley/software/Pester-1.1b18.dmg">here</a>
-            and replace this copy of Pester with the updated version.</p>
-	  <p><b>You must update Pester if you are using OS X Mountain
-	      Lion (10.8) or Mavericks (10.9): versions 1.1b14 and
-	      earlier will not work properly.</b></p>
-	  <p>Pester 1.1b15 and later are again able to update
-	    through this window.</p>
-        </td></tr>
+        <p>A recent Apple security update causes updates through
+this window to fail.</p>
+        <p>To update, please download Pester 1.1b19 <a
+        href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">here</a>
+        and replace this copy of Pester with the updated version.</p>
+        <p><b>You must update Pester if you are using OS X Mountain
+        Lion (10.8), Mavericks (10.9) or Yosemite (10.10): versions
+        1.1b14 and earlier will not work properly.</b></p>
+        <p>Pester 1.1b15 and later are again able to update
+        through this window.</p>
+	</td></tr>
+</table>
+<p />
+<table>
+    <tr><th>Pester 1.1 beta 19 (58)</th></tr>
+    <tr><td><ul>
+        <li>Display messages in help tags in notification alerts,
+        useful when messages are too large to fit.</li>
+        <li>Display singular time units (second, minute, etc.) in the
+        popup menu as appropriate.</li>
+        <li>Improve speech voice handling: limit the voice pop-up
+        menu’s contents to the voices you have enabled in System
+        Preferences; more reliably select non-MacinTalk voices
+        (previously, the default voice was used); do not display
+        «unknown» in the voice pop-up menu; update the voice pop-up
+        menu when voices are enabled or disabled.</li>
+        <li>Support natural-language date and time entry on OS X
+        Yosemite (10.10), by linking to Perl 5.16 on OS X
+        10.9&ndash;10.10.  Perl 5.12 remains in use on OS X
+        10.7&ndash;10.8.</li>
+        <li>Adjust some user interface elements to account for changes
+        in OS X Yosemite.</li>
+        <li>Update Developer ID code signing for Apple’s changes to
+        Gatekeeper in OS X 10.9.5 and 10.10.</li>
+        <li>Work around a bug in OS X 10.10 which initially scrolled
+        the first alarm in the alarm list out of view.</li>
+        <li>Update Sparkle to 1.7.1.</li>
+        <li>Code cleanups and modernization without (intended) changes
+        in functionality; remove some code which was never used.</li>
+        <li><b>Note:</b> This version requires OS X 10.7 or later;
+        1.1b18 is the last version of Pester to support Mac OS X
+        10.6.8.</li>
+    </ul></td></tr>
 </table>
 <p />
 <table>
