--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -32,7 +32,7 @@ this window to fail.</p>
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 19 (58)</th></tr>
+    <tr><th>Pester 1.1 beta 19 (59)</th></tr>
     <tr><td><ul>
         <li>Display messages in help tags in notification alerts,
         useful when messages are too large to fit.</li>
@@ -47,7 +47,8 @@ this window to fail.</p>
         <li>Support natural-language date and time entry on OS X
         Yosemite (10.10), by linking to Perl 5.16 on OS X
         10.9&ndash;10.10.  Perl 5.12 remains in use on OS X
-        10.7&ndash;10.8.</li>
+        10.7&ndash;10.8.  (Build 59: Actually use Perl 5.12 instead of
+        failing at using 5.16 on OS X 10.8.)</li>
         <li>Adjust some user interface elements to account for changes
         in OS X Yosemite.</li>
         <li>Update Developer ID code signing for Apple’s changes to
