Data detector fallback for date parsing; release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -32,7 +32,38 @@ this window to fail.</p>
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 19 (58)</th></tr>
+    <tr><th>Pester 1.1 beta 20 (62)</th></tr>
+    <tr><td><ul>
+        <li>Speed up launching Pester by delaying natural language date
+        parser initialization.</li>
+        <li>Fix an issue introduced in 1.1b19 where Pester would hang
+        on launch with some voice preferences.  (Thanks to João Nelas
+        for the report.)</li>
+        <li>Fix an issue where the selected sound output device would
+        be incorrectly reset if the default sound output device was
+        changed.</li>
+        <li>Fix an issue where the selected sound output device in
+        Preferences would not be correctly shown if the list of
+        sound devices changed.</li>
+        <li>Fix an issue in which the media selection sheet would not
+        display if the alert sound was currently selected.</li>
+        <li>Fix an issue in which long date formats (e.g.,
+        Portuguese) could cause the end of the date to be cut off at
+        the bottom left of the Set Alarm window.</li>
+        <li>Update the natural language date
+        parser, <tt>Date::Manip</tt> (fixes for XXX).</li>
+        <li>Use Apple’s Data Detectors (reintroduced in OS X Lion
+        10.7) as an additional date parser.</li>
+        <li>Code cleanups and modernization without (intended) changes
+        in functionality; remove some code which was never used.</li>
+        <li><b>Note:</b> This version requires OS X 10.9 or later;
+        1.1b19 is the last version of Pester to support Mac OS X
+        10.7 and 10.8.</li>
+    </ul></td></tr>
+</table>
+<p />
+<table>
+    <tr><th>Pester 1.1 beta 19 (59)</th></tr>
     <tr><td><ul>
         <li>Display messages in help tags in notification alerts,
         useful when messages are too large to fit.</li>
@@ -47,7 +78,8 @@ this window to fail.</p>
         <li>Support natural-language date and time entry on OS X
         Yosemite (10.10), by linking to Perl 5.16 on OS X
         10.9&ndash;10.10.  Perl 5.12 remains in use on OS X
-        10.7&ndash;10.8.</li>
+        10.7&ndash;10.8.  (Build 59: Actually use Perl 5.12 instead of
+        failing at using 5.16 on OS X 10.8.)</li>
         <li>Adjust some user interface elements to account for changes
         in OS X Yosemite.</li>
         <li>Update Developer ID code signing for Apple’s changes to
