Read Me and release notes changes in preparation for 1.1b20.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -20,12 +20,15 @@
 	<tr><td>
         <p>A recent Apple security update causes updates through
 this window to fail.</p>
-        <p>To update, please download Pester 1.1b19 <a
-        href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">here</a>
-        and replace this copy of Pester with the updated version.</p>
+        <p>To update,
+        please <a href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">download
+            Pester 1.1b19</a> (for OS X 10.8) or
+        <a href="http://sabi.net/nriley/software/Pester-1.1b20.dmg">Pester
+          1.1b20</a> (for OS X 10.9–10.11) and replace this copy of
+        Pester with the updated version.</p>
         <p><b>You must update Pester if you are using OS X Mountain
-        Lion (10.8), Mavericks (10.9) or Yosemite (10.10): versions
-        1.1b14 and earlier will not work properly.</b></p>
+        Lion (10.8) or later: versions 1.1b14 and earlier will not
+        work properly.</b></p>
         <p>Pester 1.1b15 and later are again able to update
         through this window.</p>
 	</td></tr>
@@ -52,6 +55,9 @@ this window to fail.</p>
         the bottom left of the Set Alarm window.</li>
         <li>Update the natural language date
         parser, <tt>Date::Manip</tt> (fixes for XXX).</li>
+        <li>Support natural-language date and time entry on OS X
+        El Capitan (10.11), by linking to Perl 5.16 on OS X
+        10.9&ndash;10.11.</li>
         <li>Use Apple’s Data Detectors (reintroduced in OS X Lion
         10.7) as an additional date parser.</li>
         <li>Code cleanups and modernization without (intended) changes
