Update release notes for some recent changes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -42,6 +42,7 @@ this window to fail.</p>
         <li>Fix an issue introduced in 1.1b19 where Pester would hang
         on launch with some voice preferences.  (Thanks to João Nelas
         for the report.)</li>
+        <li>Fix issues where the correct voice list would not be shown.</li>
         <li>Fix an issue where the selected sound output device would
         be incorrectly reset if the default sound output device was
         changed.</li>
@@ -58,6 +59,8 @@ this window to fail.</p>
         <li>Support natural-language date and time entry on OS X
         El Capitan (10.11), by linking to Perl 5.16 on OS X
         10.9&ndash;10.11.</li>
+        <li>Adjust some user interface elements to account for changes
+        in OS X El Capitan.</li>
         <li>Use Apple’s Data Detectors (reintroduced in OS X Lion
         10.7) as an additional date parser.</li>
         <li>Code cleanups and modernization without (intended) changes
