--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -42,7 +42,9 @@ this window to fail.</p>
         <li>Fix an issue introduced in 1.1b19 where Pester would hang
         on launch with some voice preferences.  (Thanks to João Nelas
         for the report.)</li>
-        <li>Fix issues where the correct voice list would not be shown.</li>
+        <li>Fix issues where the correct voice list would not be
+        shown; try to display the voice list as much like Dictation
+        &amp; Speech System Preferences as possible.</li>
         <li>Fix an issue where the selected sound output device would
         be incorrectly reset if the default sound output device was
         changed.</li>
