--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -24,15 +24,15 @@ this window to fail.</p>
         href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">here</a>
         and replace this copy of Pester with the updated version.</p>
         <p><b>You must update Pester if you are using OS X Mountain
-        Lion (10.8), Mavericks (10.9) or Yosemite (10.10): versions
-        1.1b14 and earlier will not work properly.</b></p>
+        Lion (10.8) or later: versions 1.1b14 and earlier will not
+        work properly.</b></p>
         <p>Pester 1.1b15 and later are again able to update
         through this window.</p>
 	</td></tr>
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 19 (59)</th></tr>
+    <tr><th>Pester 1.1 beta 19 (60)</th></tr>
     <tr><td><ul>
         <li>Display messages in help tags in notification alerts,
         useful when messages are too large to fit.</li>
@@ -41,9 +41,13 @@ this window to fail.</p>
         <li>Improve speech voice handling: limit the voice pop-up
         menu’s contents to the voices you have enabled in System
         Preferences; more reliably select non-MacinTalk voices
-        (previously, the default voice was used); do not display
-        «unknown» in the voice pop-up menu; update the voice pop-up
-        menu when voices are enabled or disabled.</li>
+        (previously, the default voice was used; update the voice
+        pop-up menu when voices are enabled or disabled. (Build 60:
+        Fix an issue where Pester would hang on launch with some voice
+        preferences — thanks to João Nelas for the report; fix issues
+        where the correct voice list would not be shown; try to
+        display the voice list as much like Dictation &amp; Speech
+        System Preferences as possible.)</li>
         <li>Support natural-language date and time entry on OS X
         Yosemite (10.10), by linking to Perl 5.16 on OS X
         10.9&ndash;10.10.  Perl 5.12 remains in use on OS X
