--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -32,7 +32,7 @@ this window to fail.</p>
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 19 (60)</th></tr>
+    <tr><th>Pester 1.1 beta 19 (61)</th></tr>
     <tr><td><ul>
         <li>Display messages in help tags in notification alerts,
         useful when messages are too large to fit.</li>
@@ -41,13 +41,13 @@ this window to fail.</p>
         <li>Improve speech voice handling: limit the voice pop-up
         menu’s contents to the voices you have enabled in System
         Preferences; more reliably select non-MacinTalk voices
-        (previously, the default voice was used; update the voice
-        pop-up menu when voices are enabled or disabled. (Build 60:
-        Fix an issue where Pester would hang on launch with some voice
-        preferences — thanks to João Nelas for the report; fix issues
-        where the correct voice list would not be shown; try to
-        display the voice list as much like Dictation &amp; Speech
-        System Preferences as possible.)</li>
+        (previously, the default voice was used); don't display
+        «unknown» in the voice pop-up menu unless it’s currently
+        selected; update the voice pop-up menu when voices are enabled
+        or disabled. (Build 61: Fix an issue where Pester would hang
+        or crash on launch in some configurations — thanks to João
+        Nelas for the report; also, display the voice pop-up menu
+        similarly to its counterpart in System Preferences.)</li>
         <li>Support natural-language date and time entry on OS X
         Yosemite (10.10), by linking to Perl 5.16 on OS X
         10.9&ndash;10.10.  Perl 5.12 remains in use on OS X
