Disable AirPlay output on 10.11 as it’s too flaky to be usable, and per-app AirPlay seems to be broken by design.
It was never *great* on 10.10 or earlier, but this seems to be the last straw.

I asked about this but did not get a response.

https://forums.developer.apple.com/thread/17664

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -41,6 +41,9 @@ this window to fail.</p>
         parser initialization.</li>
         <li>No longer use QuickTime for sound playback in most
         cases.</li>
+        <li>Disable AirPlay output on OS X El Capitan (10.11), which
+        no longer supports individual applications playing sounds back
+        through AirPlay.</li>
         <li>Fix an issue where the selected sound output device would
         be incorrectly reset if the default sound output device was
         changed.</li>
