Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -3818,15 +3818,7 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level3 subcell">Ugly artifacts when dragging the split bar (report a bug)<br>
-</td>
-</tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
-<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img onmousedown="ioSwitch('pd4lrfUo3eAD', event.shiftKey)" id="id4lrfUo3eAD" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img onmousedown="ioSwitch('pd4lrfUo3eAD', event.shiftKey)" id="id4lrfUo3eAD" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
 </td>
 <td class=" content level3 subcell">AirPlay doesn't show up always:  <span><a href="https://forums.developer.apple.com/thread/17664">forums.developer.apple.com—17664</a></span><br>
 </td>
@@ -3835,7 +3827,7 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor4"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level4 levelguttercolor4" style="width: 57px;"></td>
 <td class=" subcell wholedocgutter indicator level4 levelguttercolor4" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level4 subcell">Disable AirPlay entirely on 10.11 (figure out what the bizarro names show up as so we can filter them)<br>
 </td>
@@ -3849,6 +3841,14 @@
 </td>
 </tr></table></div></td></tr></table>
 </div>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">Ugly artifacts when dragging the split bar (report a bug)<br>
+</td>
+</tr></table></div></td></tr></table>
 </div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
