--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -35,7 +35,7 @@ this window to fail.</p>
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 20 (62)</th></tr>
+    <tr><th>Pester 1.1 beta 20 (63)</th></tr>
     <tr><td><ul>
         <li>Speed up launching Pester by delaying natural language date
         parser initialization.</li>
@@ -60,7 +60,7 @@ this window to fail.</p>
         well) — thanks to Horacio Mijail Antón Quiles for the
         report.</li>
         <li>Update the natural language date
-        parser, <tt>Date::Manip</tt> (fixes for XXX).</li>
+        parser, <tt>Date::Manip</tt>, to version 6.48.</li>
         <li>Use Apple’s Data Detectors (reintroduced in OS X 10.7
         Lion) as a fallback date parser.</li>
         <li>Support natural-language date and time entry on OS X
@@ -71,8 +71,8 @@ this window to fail.</p>
         <li>Code cleanups and modernization without (intended) changes
         in functionality; remove some code which was never used.</li>
         <li><b>Note:</b> This version requires OS X 10.9 or later;
-        1.1b19 is the last version of Pester to support Mac OS X
-        10.7 and 10.8.</li>
+        1.1b19 is the last version of Pester to support OS X 10.7 and
+        10.8.</li>
     </ul></td></tr>
 </table>
 <p />
