Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4422,7 +4422,7 @@
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
-<td class=" content level3 subcell">Repeat every day if date is omitted (#19)<br>
+<td class=" content level3 subcell">Repeat every day if date is omitted ( <span><a href="https://github.com/nriley/Pester/issues/19">#19</a></span>)<br>
 </td>
 </tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
