Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -3885,11 +3885,29 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+<img onmousedown="ioSwitch('pnQNzEMaU2FC', event.shiftKey)" id="inQNzEMaU2FC" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
 <td class=" content level2 subcell">Incorporate new icon from José Manuel Sánchez ( <span><a href="mailto:josema@vitaminew.com">josema@vitaminew.com</a></span>)<br>
 </td>
 </tr></table></div></td></tr></table>
+<div id="pnQNzEMaU2FC" class="expanded">
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">Done (v2).<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">Still need to put the minute hand back in<br>
+</td>
+</tr></table></div></td></tr></table>
+</div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -3982,6 +4000,14 @@
 </td>
 </tr></table></div></td></tr></table></div>
 </div>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level2 subcell">Growl and Sparkle framework headers are being shipped. Thought these were being stripped — something wrong with build process?<br>
+</td>
+</tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4403,12 +4429,12 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pfYQJ4Bknvt1', event.shiftKey)" id="ifYQJ4Bknvt1" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img onmousedown="ioSwitch('pfYQJ4Bknvt1', event.shiftKey)" id="ifYQJ4Bknvt1" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
 <td class=" content level2 subcell">Common user requests<br>
 </td>
 </tr></table></div></td></tr></table>
-<div id="pfYQJ4Bknvt1" class="collapsed">
+<div id="pfYQJ4Bknvt1" class="expanded">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
