Don’t need a font in Credits.html any more.
Even on 10.10, using the UI version of Helvetica Neue still looks better.

--- a/Source/en.lproj/Credits.html
+++ b/Source/en.lproj/Credits.html
@@ -1,1 +1,1 @@
-<font face="Helvetica Neue" size="-1"><b>Icon by</b> Jos&eacute; Manuel S&aacute;nchez.</font>
+<font size="-1"><b>Icon by</b> Jos&eacute; Manuel S&aacute;nchez.</font>
